--- a/styles/flower-market.css
+++ b/styles/flower-market.css
@@ -40,9 +40,27 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
+.background-color {
+    background-color: #F5F8FF;
+}
+
 .content-body {
     max-width: 1140px;
     margin: 0 auto;
+}
+
+section {
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.section-title {
+    color: #E95A08;
+}
+
+.paragraph-style {
+    font-weight: 400;
+    font-size: 1.375rem;
 }
 
 /* Navbar related styles */
@@ -67,4 +85,15 @@
 
 #cart-item {
     padding-left: 10px;
+}
+
+/* Banner related styles */
+.banner {
+    align-items: center;
+}
+
+.banner-title {
+    font-weight: 700;
+    font-size: 4.0625rem;
+    margin-bottom: 13px;
 }
